--- a/src/styles/base/_helpers.scss
+++ b/src/styles/base/_helpers.scss
@@ -4,6 +4,21 @@
   display: table;
 }
 
+/**
+ * Main content containers
+ * 1. Make the container full-width with a maximum width
+ * 2. Center it in the viewport
+ * 3. Leave some space on the edges, especially valuable on small screens
+ */
+.container {
+  max-width: $max-width; /* 1 */
+  margin-left: auto; /* 2 */
+  margin-right: auto; /* 2 */
+  padding-left: 20px; /* 3 */
+  padding-right: 20px; /* 3 */
+  width: 100%; /* 1 */
+}
+
 .sr-only {
   border: 0 !important;
   clip: rect(1px, 1px, 1px, 1px) !important;
@@ -24,4 +39,8 @@
   overflow: visible !important;
   width: auto !important;
   white-space: normal !important;
+}
+
+#cornifycount {
+  display: none;
 }
