--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,6 +1,6 @@
 footer {
   position: absolute;
-  bottom: -50px;
+  bottom: -60px;
   width: 100%;
 
   .social {
@@ -10,10 +10,10 @@ footer {
 
   .social-link {
     position: relative;
-    height: 60px;
-    width: 60px;
+    height: 80px;
+    width: 80px;
     margin: 10px;
-    padding: 15px;
+    padding: 20px;
     border-radius: 50%;
     background-color: $link-color;
     overflow: hidden;
@@ -33,7 +33,7 @@ footer {
       z-index: 10;
     }
 
-    &:hover {
+    @include on-event {
       &::after {
         left: 120%;
         transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
