Add mobile nav and tweak some colors

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 /// @type List
 $text-font-stack: 'Raleway', sans-serif;
 
-$blue: #059df6;
+$blue: #4c83db;
 $green: #11af60;
 $text-color: #111;
 $link-color: $green;
