--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,7 +1,11 @@
 footer {
   position: absolute;
-  bottom: -60px;
-  width: 100%;
+  bottom: -75px;
+  width: calc(100% - 40px);
+
+  @include respond-to(medium) {
+    bottom: -85px;
+  }
 
   .social {
     display: flex;
@@ -10,14 +14,20 @@ footer {
 
   .social-link {
     position: relative;
-    height: 80px;
-    width: 80px;
+    height: 60px;
+    width: 60px;
     margin: 10px;
-    padding: 20px;
+    padding: 15px;
     border-radius: 50%;
     background-color: $link-color;
     overflow: hidden;
     transition: all .3s;
+
+    @include respond-to(medium) {
+      height: 80px;
+      width: 80px;
+      padding: 20px;
+    }
 
     &::after {
       content: "";
@@ -46,6 +56,7 @@ footer {
   }
 
   .copyright {
+    min-height: 35px;
     text-align: center;
 
     .strike {
