--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -6,7 +6,7 @@
     width: 11rem;
     margin: 0 auto;
     border-radius: 50%;
-    border: 4px solid $green;
+    border: 4px solid $blue;
 
     @include respond-to(medium) {
       float: right;
@@ -65,13 +65,13 @@
 
     .icon {
       position: relative;
-      z-index: 100;
+      z-index: 10;
       width: 40px;
       height: 40px;
       line-height: 40px;
       margin: 0 auto -10px;
-      fill: $green;
-      color: $green;
+      fill: $blue;
+      color: $blue;
       font-size: 2.5rem;
       font-weight: bold;
     }
@@ -81,7 +81,7 @@
     }
 
     .animation {
-      border: .2em solid $green;
+      border: .2em solid $blue;
       border-bottom-color: transparent;
       border-radius: 50%;
       animation: 1.5s loader linear infinite;
