--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,5 +1,14 @@
 .main-title {
-  position: absolute;
-  bottom: 60px;
-  font-size: 4rem;
+  font-size: 2rem;
+  color: $text-color;
+
+  @include respond-to(small) {
+    font-size: 3rem;
+  }
+
+  @include respond-to(medium) {
+    position: absolute;
+    bottom: 60px;
+    font-size: 4rem;
+  }
 }
