Add contact page and change logo

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -2,10 +2,11 @@
 /// @type List
 $text-font-stack: 'Raleway', sans-serif;
 
-$blue: #4c83db;
+$blue: #1d78ad;
 $green: #11af60;
 $text-color: #111;
 $link-color: $green;
+$red: #cc5b5b;
 
 
 /// Container's maximum width
