--- a/src/styles/abstracts/_animations.scss
+++ b/src/styles/abstracts/_animations.scss
@@ -1,3 +1,13 @@
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 @keyframes fade-in-right {
   0% {
     opacity: 0;
