--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -19,7 +19,8 @@ footer {
     margin: 10px;
     padding: 15px;
     border-radius: 50%;
-    background-color: $link-color;
+    border: 4px solid $green;
+    background-color: #fff;
     overflow: hidden;
     transition: all .3s;
 
@@ -29,29 +30,15 @@ footer {
       padding: 20px;
     }
 
-    &::after {
-      content: "";
-      height: 155px;
-      left: -75px;
-      opacity: .5;
-      position: absolute;
-      top: -50px;
-      transform: rotate(-35deg);
-      transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
-      width: 50px;
-      background-color: #fff;
-      z-index: 10;
-    }
-
     @include on-event {
-      &::after {
-        left: 120%;
-        transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+      .social-icon {
+        transform: scale(1.3);
       }
     }
 
     .social-icon {
       width: 100%;
+      transition: all .3s ease-out;
     }
   }
 
