--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -15,10 +15,32 @@ nav {
     height: 100px;
     display: flex;
     flex-shrink: 0;
-    padding: 10px 10px 10px 15px;
+    padding: 18px;
     border-radius: 50%;
-    background-image: linear-gradient(to bottom right, $green 0%, $blue 100%);
+    background-color: #fff;
     transition: all .3s;
+
+    &::before, &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      opacity: 0;
+      animation: fade-in 1s 1.5s linear forwards;
+    }
+
+    &::before {
+      top: 5px;
+      left: 5px;
+      border: 4px solid $green;
+    }
+
+    &::after {
+      top: -5px;
+      left: -5px;
+      border: 4px solid $blue;
+    }
 
     @include respond-to(medium){
       width: 150px;
@@ -34,16 +56,8 @@ nav {
       height: 100%;
       width: 100%;
       fill: transparent;
-      stroke: #fff;
       stroke-width: 2px;
       transition: all .3s;
-      animation: fill 1s 2s linear forwards;
-
-      @keyframes fill {
-        to {
-          fill: #fff;
-        }
-      }
 
       .first-letter, .second-letter {
         stroke-dasharray: 1000;
@@ -51,11 +65,25 @@ nav {
       }
 
       .first-letter {
-        animation: dash 2s .5s linear forwards;
+        stroke: $blue;
+        animation: dash 2s linear forwards, fill-blue 1s 1.5s linear forwards;
       }
 
       .second-letter {
-        animation: dash 3s .5s linear forwards;
+        stroke: $green;
+        animation: dash 3s linear forwards, fill-green 1s 1.5s linear forwards;
+      }
+
+      @keyframes fill-blue {
+        to {
+          fill: $blue;
+        }
+      }
+
+      @keyframes fill-green {
+        to {
+          fill: $green;
+        }
       }
 
       @keyframes dash {
@@ -67,17 +95,19 @@ nav {
   }
 
   .menu-toggle {
-    position: relative;
     z-index: 200;
+    background-color: transparent;
+    outline: none;
+
+    &::after {
+      content: none;
+    }
 
     @include respond-to(medium) {
       display: none;
     }
-    
-    &.open {
-      position: fixed;
-      right: 40px;
 
+    &.open, &:hover {
       .top-bun {
         transform: translateY(-10px);
       }
@@ -93,6 +123,11 @@ nav {
       .bottom-bun {
         transform: translateY(10px);
       }
+    }
+
+    &.open {
+      position: fixed;
+      right: 45px;
 
       ~ .main-nav {
         display: block;
@@ -102,25 +137,32 @@ nav {
         left: 0;
         height: 100%;
         width: 100%;
-        padding: 180px 40px 0 0;
+        padding: 180px 45px 0 0;
         text-align: right;
         background-image: linear-gradient(to bottom right, $blue 0%, $green 100%);
         animation: none;
+
+        a {
+          @include on-event {
+            color: $text-color;
+          }
+        }
       }
     }
 
     .menu-icon {
-      height: 80px;
-      width: 80px;
+      height: 60px;
+      width: 60px;
 
       g, path {
-        transition: all .3s ease-in-out;
+        transition: all .3s ease-out;
       }
     }
 
     .menu-text {
       font-size: 1rem;
       text-transform: uppercase;
+      color: $text-color;
     }
   }
 
@@ -129,9 +171,9 @@ nav {
     position: relative;
     align-items: center;
     height: 100%;
-    margin: 0;
+    margin: 0 0 0 20px;
     padding: 0;
-    animation: fade-in-right 1s ease-in-out;
+    animation: fade-in-right 1s ease-out;
 
     @include respond-to(medium) {
       display: flex;
@@ -193,7 +235,7 @@ nav {
       position: absolute;
       left: -140px;
       bottom: -10px;
-      transition: 0.7s ease-in-out;
+      transition: 0.7s ease-out;
       width: 110px;
       height: 6px;
       background: $link-color;
