--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -28,6 +28,7 @@ nav {
       border-radius: 50%;
       opacity: 0;
       animation: fade-in 1s 1.5s linear forwards;
+      transition: all .3s ease-out;
     }
 
     &::before {
@@ -49,7 +50,10 @@ nav {
     }
 
     @include on-event {
-      transform: scale(1.1);
+      &::before, &::after {
+        top: 0;
+        left: 0;
+      }
     }
 
     .logo-letters {
@@ -136,7 +140,8 @@ nav {
         top: 0;
         left: 0;
         height: 100%;
-        width: 100%;
+        width: calc(100% + 20px);
+        margin-left: -20px;
         padding: 180px 45px 0 0;
         text-align: right;
         background-image: linear-gradient(to bottom right, $blue 0%, $green 100%);
@@ -233,7 +238,7 @@ nav {
     .line {
       opacity: 0;
       position: absolute;
-      left: -140px;
+      left: -160px;
       bottom: -10px;
       transition: 0.7s ease-out;
       width: 110px;
