--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -6,10 +6,10 @@
 
   .animation, .form {
     width: 100%;
-    padding: 0 40px;
 
     @include respond-to(medium) {
       width: 50%;
+      padding: 0 40px;
     }
   }
 
@@ -17,35 +17,41 @@
     position: relative;
 
     .plane {
+      display: none;
       position: absolute;
-      bottom: 0;
-      left: 40px;
+      top: calc(50% - 150px);
+      left: calc(50% - 150px);
       fill: $blue;
-      width: 60px;
-      transition: all 1s ease-in-out;
-      animation: fly 10s infinite;
+      width: 300px;
+      cursor: pointer;
+      transition: all .3s ease-out;
+
+      @include respond-to(medium) {
+        display: block;
+      }
+
+      @include on-event {
+        animation: jiggle 0.2s alternate infinite ease-in-out;
+      }
+
+      @keyframes jiggle {
+        from {
+          transform: rotate(-2deg);
+        }
+        to {
+          transform: rotate(2deg);
+        }
+      }
+      
+      &.fly {
+        animation: fly 1s ease-in;
+      }
     }
 
     @keyframes fly {
-
-      45% {
-        transform: rotate(0);
-      }
-
-      50% {
-        bottom: 100%;
-        left: 100%;
-        transform: rotate(180deg);
-      }
-
-      95% {
-        transform: rotate(180deg);
-      }
-
       100% {
-        bottom: 0;
-        left: 40px;
-        transform: rotate(0);
+        top: -100%;
+        left: 200%;
       }
     }
 
