--- a/src/styles/abstracts/_animations.scss
+++ b/src/styles/abstracts/_animations.scss
@@ -1,3 +1,12 @@
+.barba-container {
+  opacity: 0;
+  transition: all .2s ease-in-out;
+
+  &.visible {
+    opacity: 1;
+  }
+}
+
 @keyframes fade-in {
   0% {
     opacity: 0;
