--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -47,10 +47,14 @@ a {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 
 h2 {
-  margin-top: 3rem;
+  margin-top: 4rem;
   font-size: 1.5rem;
+}
+
+abbr {
+  cursor: help;
 }
