--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -73,5 +73,13 @@ footer {
     .strike {
       text-decoration: line-through;
     }
+    
+    .unicorns {
+      display: none;
+      
+      @include respond-to(medium) {
+        display: inline;
+      }
+    }
   }
 }
