Remove CSS injection from typing script

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -12,5 +12,13 @@
       bottom: 60px;
       font-size: 4rem;
     }
+
+    a {
+      border: none;
+    }
+
+    .txt-rotate .wrap {
+      border-right: 0.08em solid #666;
+    }
   }
 }
