--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -28,6 +28,8 @@
 
     li {
       flex: 0 0 100%;
+      display: flex;
+      flex-direction: column;
       min-height: 130px;
       margin: 1rem 0;
       list-style: none;
