Update some copy

--- a/src/styles/layout/_print.scss
+++ b/src/styles/layout/_print.scss
@@ -3,7 +3,7 @@
     border: none !important;
   }
 
-  .main-nav, .menu-toggle, footer {
+  .main-nav, .menu-toggle, .notice, footer {
     display: none !important;
   }
 }
