Change links hover styles and form inputs border color

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -7,7 +7,7 @@ $green: #11af60;
 $text-color: #111;
 $link-color: $green;
 $red: #cc5b5b;
-
+$light-grey: #cccccc;
 
 /// Container's maximum width
 /// @type Length
