--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -74,6 +74,7 @@
     input[type=text], input[type=email], textarea {
       margin-bottom: 20px;
       padding: 5px;
+      border: 1px solid $light-grey;
     }
 
     abbr {
