--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -69,6 +69,7 @@
     label {
       margin-bottom: 10px;
       font-weight: bold;
+      font-weight: 400;
     }
 
     input[type=text], input[type=email], textarea {
