Fix footer icons size

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -60,6 +60,7 @@ footer {
     }
 
     .social-icon {
+      height: 100%;
       width: 100%;
       fill: $blue;
       transition: all .3s ease-out;
