--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -68,19 +68,16 @@ footer {
   }
 
   .copyright {
+    display: none;
     min-height: 35px;
     text-align: center;
 
+    @include respond-to(medium) {
+      display: block;
+    }
+
     .strike {
       text-decoration: line-through;
-    }
-    
-    .unicorns {
-      display: none;
-      
-      @include respond-to(medium) {
-        display: inline;
-      }
     }
   }
 }
