--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -22,15 +22,17 @@ html {
 body {
   position: relative;
   min-width: calc(100vw - 40px);
-  min-height: calc(100vh - 145px);
+  min-height: calc(100vh - 60px);
   display: flex;
   flex-direction: column;
   padding: 20px 20px 60px;
   font-size: 62.5%;
   color: $text-color;
   font-family: $text-font-stack;
+  border-bottom: 4px solid $green;
 
   @include respond-to(medium) {
+    min-height: calc(100vh - 125px);
     margin: 20px;
     border: 4px solid transparent;
     border-image: linear-gradient(to bottom right, $blue 0%, $green 100%);
