--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,7 +23,8 @@
 
 // 5. Components
 @import
-  'components/button';
+  'components/button',
+  'components/picture';
 
 // 6. Page-specific styles
 @import
