--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -23,6 +23,8 @@ button, .button {
   }
 
   @include on-event {
+    background-color: $blue;
+
     &::after {
       top: -100%;
       left: 150%;
