Initial hugo setup (WIP)

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,6 +1,6 @@
-@@include('head.html')
+{{ partial "head.html" . }}
 
-@@include('nav.html')
+{{ partial "nav.html" . }}
 
 <div id="barba-wrapper">
     <main class="barba-container home">
@@ -14,4 +14,4 @@
     </main>
 </div>
 
-@@include('footer.html')
+{{ partial "footer.html" . }}
