--- a/site/layouts/about.html
+++ b/site/layouts/about.html
@@ -1,6 +1,6 @@
-@@include('head.html')
+{{ partial "head.html" . }}
 
-@@include('nav.html')
+{{ partial "nav.html" . }}
 
 <div id="barba-wrapper">
     <main class="barba-container about">
@@ -118,4 +118,4 @@
     </main>
 </div>
 
-@@include('footer.html')
+{{ partial "footer.html" . }}
