--- a/site/layouts/contact.html
+++ b/site/layouts/contact.html
@@ -1,6 +1,6 @@
-@@include('head.html')
+{{ partial "head.html" . }}
 
-@@include('nav.html')
+{{ partial "nav.html" . }}
 
 <div id="barba-wrapper">
     <main class="barba-container contact">
@@ -30,4 +30,4 @@
     </main>
 </div>
 
-@@include('footer.html')
+{{ partial "footer.html" . }}
