--- a/site/layouts/projects.html
+++ b/site/layouts/projects.html
@@ -1,6 +1,6 @@
-@@include('head.html')
+{{ partial "head.html" . }}
 
-@@include('nav.html')
+{{ partial "nav.html" . }}
 
 <div id="barba-wrapper">
     <main class="barba-container projects">
@@ -22,4 +22,4 @@
     </main>
 </div>
 
-@@include('footer.html')
+{{ partial "footer.html" . }}
