--- a/site/layouts/contact/single.html
+++ b/site/layouts/contact/single.html
@@ -1,6 +1,6 @@
-{{ partial "head.html" . }}
+{{ partial "head" . }}
 
-{{ partial "nav.html" . }}
+{{ partial "nav" . }}
 
 <div id="barba-wrapper">
     <main class="barba-container contact">
@@ -30,4 +30,4 @@
     </main>
 </div>
 
-{{ partial "footer.html" . }}
+{{ partial "footer" . }}
