--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,10 +1,10 @@
-{{ partial "head.html" . }}
+{{ partial "head" . }}
 
-{{ partial "nav.html" . }}
+{{ partial "nav" . }}
 
 <div id="barba-wrapper">
     <main class="barba-container home">
-        <h1 class="main-title">👋 I'm <a href="about.html">Maël Brunet</a>, a
+        <h1 class="main-title">👋 I'm <a href="about/list$.html">Maël Brunet</a>, a
             <span
                     class="txt-rotate"
                     data-period="2000"
@@ -14,4 +14,4 @@
     </main>
 </div>
 
-{{ partial "footer.html" . }}
+{{ partial "footer" . }}
