--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -2,25 +2,25 @@
         <div class="social">
             <a href="https://www.linkedin.com/in/ma%C3%ABl-brunet-b5876118/" target="_blank" class="social-link">
                 <svg class="social-icon">
-                    <use xlink:href="images/svg-symbols.svg#linkedin"></use>
+                    <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#linkedin"></use>
                 </svg>
             </a>
 
             <a href="https://github.com/maeligg" target="_blank" class="social-link">
                 <svg class="social-icon">
-                    <use xlink:href="images/svg-symbols.svg#github"></use>
+                    <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#github"></use>
                 </svg>
             </a>
 
             <a href="https://codepen.io/Maelig/" target="_blank" class="social-link">
                 <svg class="social-icon">
-                    <use xlink:href="images/svg-symbols.svg#codepen"></use>
+                    <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#codepen"></use>
                 </svg>
             </a>
 
             <a href="https://twitter.com/maelb" target="_blank" class="social-link">
                 <svg class="social-icon">
-                    <use xlink:href="images/svg-symbols.svg#twitter"></use>
+                    <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#twitter"></use>
                 </svg>
             </a>
         </div>
@@ -30,8 +30,8 @@
         </div>
     </footer>
 
-    <script src="scripts/vendors.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="{{ .Site.BaseURL }}scripts/vendors.js"></script>
+    <script src="{{ .Site.BaseURL }}scripts/main.js"></script>
 
 </body>
 </html>
