--- a/site/layouts/projects/single.html
+++ b/site/layouts/projects/single.html
@@ -1,6 +1,6 @@
-{{ partial "head.html" . }}
+{{ partial "head" . }}
 
-{{ partial "nav.html" . }}
+{{ partial "nav" . }}
 
 <div id="barba-wrapper">
     <main class="barba-container projects">
@@ -22,4 +22,4 @@
     </main>
 </div>
 
-{{ partial "footer.html" . }}
+{{ partial "footer" . }}
