--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -1,16 +1,16 @@
-{{ partial "head.html" . }}
+{{ partial "head" . }}
 
-{{ partial "nav.html" . }}
+{{ partial "nav" . }}
 
 <div id="barba-wrapper">
     <main class="barba-container resume">
         <div class="container">
             <h1>Résumé / Curriculum Vitae</h1>
             <p class="notice-web">This page is optimised for print️, feel free to print it out or export it to PDF if that's your thing. For more information about myself, head over to the
-                <a href="about.html">about</a> page.</p>
+                <a href="../about/list$.html">about</a> page.</p>
             <p class="notice-print">This document is also available as a web page at <a href="https://www.maelbrunet.com/resume">https://www.maelbrunet.com/resume</a></p>
 
-            <img src="../../src/images/mael.jpg" alt="Maël Brunet" class="me">
+            <img src="{{ .Site.BaseURL }}images/mael.jpg" alt="Maël Brunet" class="me">
 
             <p class="contact-info">📧 maelbrunet<span class="highlight">[at]</span>gmail<span class="highlight">[dot]</span>com</p>
 
@@ -109,4 +109,4 @@
     </main>
 </div>
 
-{{ partial "footer.html" . }}
+{{ partial "footer" . }}
