Fix anchor in resume

--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -7,7 +7,7 @@
         <div class="container">
             <h1>Résumé / Curriculum Vitae</h1>
             <p class="notice-web">This page is optimised for print️, feel free to print it out or export it to PDF if that's your thing. For more information about myself, head over to the
-                <a href="../about/list$.html">about</a> page.</p>
+                <a href="{{ .Site.BaseURL }}about">about</a> page.</p>
             <p class="notice-print">This document is also available as a web page at <a href="https://www.maelbrunet.com/resume">https://www.maelbrunet.com/resume</a></p>
 
             <img src="{{ .Site.BaseURL }}images/mael.jpg" alt="Maël Brunet" class="me">
@@ -74,7 +74,7 @@
                     <li>Spanish (intermediate)</li>
                 </ul>
             </div>
-            
+
             <h2>Education</h2>
             <ul class="education">
                 <li>
