--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,12 +4,12 @@
 
 <div id="barba-wrapper">
     <main class="barba-container home">
-        <h1 class="main-title">👋 I'm <a href="about/list$.html">Maël Brunet</a>, a
+        <h1 class="main-title">👋 I'm <a href="{{ .Site.BaseURL }}about">Maël Brunet</a>, a
             <span
                     class="txt-rotate"
                     data-period="2000"
-                    data-rotate='[ "front-end developer", "UI designer", "problem-solver" ]'></span>
-            <div>based in Brussels, Belgium.</div>
+                    data-rotate='[ "front-end developer", "UI designer", "problem-solver" ]'></span><br>
+            based in Brussels, Belgium.
         </h1>
     </main>
 </div>
