Add list of projects

--- a/site/layouts/projects/single.html
+++ b/site/layouts/projects/single.html
@@ -7,17 +7,31 @@
         <div class="container">
             <h1>Projects</h1>
 
-            <svg class="bricks" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
-                <path d="M53 36H29c-.552 0-1 .448-1 1v12c0 .552.448 1 1 1h24c.552 0 1-.448 1-1V37c0-.552-.448-1-1-1zm-1 12H30V38h22v10z"/>
-                <path d="M25 36H1c-.552 0-1 .448-1 1v12c0 .552.448 1 1 1h24c.552 0 1-.448 1-1V37c0-.552-.448-1-1-1zm-1 12H2V38h22v10z"/>
-                <path d="M53 20H43c-.552 0-1 .448-1 1v12c0 .552.448 1 1 1h10c.552 0 1-.448 1-1V21c0-.552-.448-1-1-1zm-1 12h-8V22h8v10z"/>
-                <path d="M14 21v12c0 .552.448 1 1 1h24c.552 0 1-.448 1-1V21c0-.552-.448-1-1-1H15c-.552 0-1 .448-1 1zm2 1h22v10H16V22z"/>
-                <path d="M1 34h10c.552 0 1-.448 1-1V21c0-.552-.448-1-1-1H1c-.552 0-1 .448-1 1v12c0 .552.448 1 1 1zm1-12h8v10H2V22z"/>
-                <path d="M53 4H29c-.552 0-1 .448-1 1v12c0 .552.448 1 1 1h24c.552 0 1-.448 1-1V5c0-.552-.448-1-1-1zm-1 12H30V6h22v10z"/>
-                <path d="M1 18h24c.552 0 1-.448 1-1V5c0-.552-.448-1-1-1H1c-.552 0-1 .448-1 1v12c0 .552.448 1 1 1zM2 6h22v10H2V6z"/>
-            </svg>
+            <p>This is where I collect side projects and things I made outside of work.</p>
 
-            <h2>In construction...</h2>
+            <h2>
+                <svg class="icon">
+                    <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#bot"></use>
+                </svg>
+                Bots
+            </h2>
+            <div class="project-list">
+                {{ range where .Site.Data.projects "category" "bot" }}
+                    {{ partial "project.html" . }}
+                {{ end }}
+            </div>
+
+            <h2>
+                <svg class="icon">
+                    <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#presentation"></use>
+                </svg>
+                Presentations
+            </h2>
+            <div class="project-list">
+                {{ range where .Site.Data.projects "category" "presentation" }}
+                    {{ partial "project.html" . }}
+                {{ end }}
+            </div>
         </div>
     </main>
 </div>
