Change some copy

--- a/site/layouts/about/single.html
+++ b/site/layouts/about/single.html
@@ -8,9 +8,7 @@
             <img src="{{ .Site.BaseURL }}images/mael.jpg" alt="Maël Brunet" class="me">
 
             <h1>About</h1>
-            <p>I'm a self-taught french (front-end) web developer and UI designer living in Brussels, Belgium and currently working for
-                <a href="https://www.emakina.be/" target="_blank">Emakina</a>, a digital agency.</p>
-            <p>I code mostly on the client-side, designing accessible and beautiful interfaces with HTML & CSS, and programming awesome experiences with JavaScript.</p>
+            <p>I'm a self-taught french (front-end) web developer and UI designer living in Brussels, Belgium. I code mostly on the client-side, designing accessible and beautiful interfaces with HTML & CSS, and programming awesome experiences with JavaScript.</p>
 
             <h2>Things I<span> ❤ </span>️(and I like to think I'm pretty good at)</h2>
             <ul class="❤">
