--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -1,10 +1,14 @@
 .about {
   h1, h2 {
     text-align: center;
-    
+
     @include respond-to(medium) {
       text-align: left;
     }
+  }
+
+  .intro {
+    margin-bottom: 4rem;
   }
 
   .❤ {
@@ -51,7 +55,7 @@
         border: 2px solid $green;
         word-break: break-word;
         hyphens: auto;
-        
+
         &::before {
           content: '';
           position: absolute;
