Fix some styles on projects page and nav

--- a/site/layouts/partials/project.html
+++ b/site/layouts/partials/project.html
@@ -11,6 +11,6 @@
   </div>
   <p>{{ .description }}</p>
   {{ if .code }}
-      <a href="{{ .code }}" target="_blank"><p>Source code</p></a>
+      <p><a href="{{ .code }}" target="_blank">Source code</a></p>
   {{ end }}
 </div>
