--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -46,7 +46,7 @@
       }
 
       h3 {
-        margin: 0;
+        margin-top: 0;
       }
     }
 
@@ -55,7 +55,7 @@
       margin-left: 20px;
       padding: 5px;
       font-size: 1rem;
-      background-color: $green;
+      background-color: $blue;
       color: #fff;
     }
 
