create a partial for skills

--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -80,6 +80,11 @@
       font-weight: bold;
       fill: $blue;
       color: $blue;
+
+      svg {
+        width: 100%;
+        height: 100%;
+      }
     }
 
     .html {
