--- a/site/layouts/about/single.html
+++ b/site/layouts/about/single.html
@@ -14,101 +14,22 @@
 
             <h2>Things I<span> ❤ </span>️(and I like to think I'm pretty good at)</h2>
             <ul class="❤">
-                <li>
-                    <div class="icon html">&lt/&gt</div>
-                    <p class="text">Clean, semantic HTML markup</p>
-                </li>
-
-                <li>
-                    <div class="icon">{ }</div>
-                    <p class="text">Responsive, well scoped CSS</p>
-                </li>
-
-                <li>
-                    <div class="icon">( )</div>
-                    <p class="text">Modular, composable JavaScript</p>
-                </li>
-
-                <li>
-                    <div class="icon">//</div>
-                    <p class="text">Well commented, maintainable code</p>
-                </li>
-
-                <li>
-                    <svg class="icon">
-                        <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#speedometer"></use>
-                    </svg>
-                    <p class="text">Lightweight, performant websites</p>
-                </li>
-
-                <li>
-                    <svg class="icon">
-                        <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#a11y"></use>
-                    </svg>
-                    <p class="text">Accessibility — the web is for everyone</p>
-                </li>
-
-                <li>
-                    <svg class="icon">
-                        <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#smartphone"></use>
-                    </svg>
-                    <p class="text">Beautiful, clearly understandable UI</p>
-                </li>
-
-                <li>
-                    <svg class="icon">
-                        <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#react"></use>
-                    </svg>
-                    <p class="text"><span>The right framework for the right job (<a href="https://facebook.github.io/react/" target="_blank">React</a> <em>is</em> pretty cool though)</span></p>
-                </li>
-
-                <li>
-                    <div class="icon animation"></div>
-                    <p class="text">Meaningful and playful animations</p>
-                </li>
-
-                <li>
-                    <div class="icon svg"><abbr title="Scalable Vector Graphics">SVG</abbr></div>
-                    <p class="text">Perfect for icons, logos, animations</p>
-                </li>
-
-                <li>
-                    <svg class="icon">
-                        <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#eye"></use>
-                    </svg>
-                    <p class="text">Attention to detail : it's the little things that matter</p>
-                </li>
-
-                <li>
-                    <svg class="icon">
-                        <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#team"></use>
-                    </svg>
-                    <p class="text">Code reviews, discussing and sharing best practices</p>
-                </li>
-
-                <li>
-                    <svg class="icon">
-                        <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#wrench"></use>
-                    </svg>
-                    <p class="text">Using the right tools for the perfect build process</p>
-                </li>
-
-                <li>
-                    <svg class="icon">
-                        <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#styleguide"></use>
-                    </svg>
-                    <p class="text">Styleguide and design systems to build consistent UI at scale</p>
-                </li>
-
-                <li>
-                    <div class="icon kiss"><abbr title="Keep It Simple, Stupid">KISS</abbr></div>
-                    <p class="text">Avoid unnecessary complexity.</p>
-                </li>
-
-                <li>
-                    <div class="icon jam"><abbr title="JavaScript, APIs and Markup">JAMstack</abbr></div>
-                    <p class="text">The <span><a href="https://jamstack.org/" target="_blank">JAMstack</a> is my jam.</span></p>
-                </li>
+                {{ partial "skill" (dict "icon" "&lt/&gt" "iconClass" "html" "text" "Clean, semantic HTML markup") }}
+                {{ partial "skill" (dict "icon" "{ }" "text" "Responsive, well scoped CSS") }}
+                {{ partial "skill" (dict "icon" "( )" "text" "Modular, composable JavaScript") }}
+                {{ partial "skill" (dict "icon" "//" "text" "Well commented, maintainable code") }}
+                {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#speedometer'></use></svg>" "text" "Lightweight, performant websites") }}
+                {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#a11y'></use></svg>" "text" "Accessibility — the web is for everyone") }}
+                {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#smartphone'></use></svg>" "text" "Beautiful, clearly understandable UI") }}
+                {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#react'></use></svg>" "text" "<span>The right framework for the right job (<a href='https://facebook.github.io/react/' target='_blank'>React</a> <em>is</em> pretty cool though)</span>") }}
+                {{ partial "skill" (dict "iconClass" "animation" "text" "Meaningful and playful animations") }}
+                {{ partial "skill" (dict "icon" "<abbr title='Scalable Vector Graphics'>SVG</abbr>" "iconClass" "svg" "text" "Perfect for icons, logos, animations") }}
+                {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#eye'></use></svg>" "text" "Attention to detail : it's the little things that matter") }}
+                {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#team'></use></svg>" "text" "Code reviews, discussing and sharing best practices") }}
+                {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#wrench'></use></svg>" "text" "Using the right tools for the perfect build process") }}
+                {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#styleguide'></use></svg>" "text" "Styleguide and design systems to build consistent UI at scale") }}
+                {{ partial "skill" (dict "icon" "<abbr title='Keep It Simple, Stupid'>KISS</abbr>" "iconClass" "kiss" "text" "Avoid unnecessary complexity.") }}
+                {{ partial "skill" (dict "icon" "<abbr title='JavaScript, APIs and Markup'>JAMstack</abbr>" "iconClass" "jam" "text" "The <span><a href='https://jamstack.org/' target='_blank'>JAMstack</a> is my jam.</span>") }}
             </ul>
 
             <h2>Outside of web development</h2>
@@ -116,7 +37,7 @@
             <p>Food is very important to me, I enjoy every part of the process : picking the right ingredients, cooking (I'm not big on cakes, but I like making just about anything else), and sharing a meal in good company. I find the whole process very similar to web development in some aspects.</p>
             <p>I play video games (though not as much as I used to), mostly on PC, and I have a particular fondness for rich narrative experiences and emergent stories.</p>
             <p>Other than that, I enjoy spending time with friends, preferably over a nice, cool beer 🍺.</p>
-        </div>
+          </div>
     </main>
 </div>
 
