--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -29,11 +29,20 @@
             <ul class="work-xp">
                 <li>
                     <div class="meta">
-                        <div class="org"><a href="https://www.emakina.be/" target="_blank">Emakina</a></div>
-                        <div class="year">Jan 2016 - now</div>
+                        <div class="org"><a href="https://www.isabelgroup.eu/en/" target="_blank">Isabel Group</a></div>
+                        <div class="year">Jan 2018 - now</div>
                     </div>
                     <div class="description">
-                        I currently work as a <b>front-end developer</b> at Emakina, part of one of the top three independent full-service digital agency groups in Europe. I focus on all things front-end related, working with technologies and frameworks including Git, NPM, Gulp, Sass, ES6 + Babel, ESlint, Twitter Bootstrap, Twig (and other templating engines), jQuery, Backbone, React, ...
+                        I joined Isabel Group as a <b>UI engineer</b>. Isabel Group is Belgium's largest fintech, providing banking services like Isabel 6, Zoomit and CodaBox to companies of all sizes. Part of a small team reporting directly to the CEO, I am in charge of developing a design system to ensure a first-rate and consistent user interface throughout all Isabel Group projects.
+                    </div>
+                </li>
+                <li>
+                    <div class="meta">
+                        <div class="org"><a href="https://www.emakina.be/" target="_blank">Emakina</a></div>
+                        <div class="year">Jan 2016 - Dec 2017</div>
+                    </div>
+                    <div class="description">
+                        I was working as a <b>front-end developer</b> at Emakina, part of one of the top three independent full-service digital agency groups in Europe. I focus on all things front-end related, working with technologies and frameworks including Git, NPM, Gulp, Sass, ES6 + Babel, ESlint, Twitter Bootstrap, Twig (and other templating engines), jQuery, Backbone, React, ...
                         Some of the projects I've contributed to include :
                         <ul>
                             <li>Lead front-end developer on the new <a href="http://www.ergo.be/nl_be/" target="_blank">Ergo insurance</a> Belgian corporate website.</li>
