--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -25,8 +25,8 @@
             </a>
         </div>
         <div class="copyright">
-            Hand-crafted with ♥️ and ☕. No lines of JQuery were <span class="strike">hurt</span> used in making this website. Code source available on
-            <a href="https://github.com/maeligg/maelbrunet" target="_blank">GitHub</a>. Try typing "unicorn" anywhere.
+            Hand-crafted with ♥️ and ☕. // 0 lines of JQuery were <span class="strike">hurt</span> used in making this website. // Code source available on
+            <a href="https://github.com/maeligg/maelbrunet" target="_blank">GitHub</a>. // Try typing "unicorn" anywhere.
         </div>
     </footer>
 
